[gd_scene load_steps=16 format=3 uid="uid://c2mr5u4duy4dq"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_76q1d"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="1_54772"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_syh70"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="3_plsb5"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="4_741qi"]
[ext_resource type="PackedScene" uid="uid://bc8g73oao3wgd" path="res://items/item.tscn" id="5_6pho5"]
[ext_resource type="Script" path="res://components/shake_component.gd" id="5_57wmg"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="7_c8dhr"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="7_s671o"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="8_h3qax"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="9_bbub5"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="11_om740"]
[ext_resource type="PackedScene" uid="uid://buqnvv77sevtv" path="res://effects/explosion_effect.tscn" id="12_0klwt"]
[ext_resource type="Script" path="res://components/score_component.gd" id="14_sjo65"]
[ext_resource type="Resource" uid="uid://c0j0oaqb8xqup" path="res://game_stats.tres" id="15_dvuj6"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_76q1d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("8_h3qax")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("7_s671o")

[node name="ItemDropSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("11_om740")
scene = ExtResource("5_6pho5")

[node name="ExplosionSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("11_om740")
scene = ExtResource("12_0klwt")

[node name="VisualComponents" type="Node" parent="."]

[node name="FlashComponent" type="Node" parent="VisualComponents" node_paths=PackedStringArray("sprite") groups=["VisualComponents"]]
script = ExtResource("4_741qi")
sprite = NodePath("../../AnimatedSprite2D")

[node name="ShakeComponent" type="Node" parent="VisualComponents" node_paths=PackedStringArray("node") groups=["VisualComponents"]]
script = ExtResource("5_57wmg")
node = NodePath("../../AnimatedSprite2D")

[node name="ScaleComponent" type="Node" parent="VisualComponents" node_paths=PackedStringArray("sprite") groups=["VisualComponents"]]
script = ExtResource("3_plsb5")
sprite = NodePath("../../AnimatedSprite2D")

[node name="StatsComponents" type="Node" parent="."]

[node name="HealthStatsComponent" type="Node" parent="StatsComponents"]
script = ExtResource("1_54772")

[node name="StateComponents" type="Node" parent="."]

[node name="MoveComponent" type="Node" parent="StateComponents" node_paths=PackedStringArray("actor")]
script = ExtResource("2_syh70")
actor = NodePath("../..")

[node name="HurtComponent" type="Node" parent="StateComponents" node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("9_bbub5")
stats_component = NodePath("../../StatsComponents/HealthStatsComponent")
hurtbox_component = NodePath("../../HurtboxComponent")

[node name="DestroyedComponent" type="Node" parent="StateComponents" node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_components")]
script = ExtResource("7_c8dhr")
actor = NodePath("../..")
stats_component = NodePath("../../StatsComponents/HealthStatsComponent")
destroy_effect_spawner_components = [NodePath("../../ItemDropSpawnerComponent"), NodePath("../../ExplosionSpawnerComponent")]

[node name="ScoreComponent" type="Node" parent="."]
script = ExtResource("14_sjo65")
game_stats = ExtResource("15_dvuj6")
